vendor/cargo/parameterized-macro-2.0.0/tests/fail/square_brackets.stderr
error: expected curly braces
 --> tests/fail/square_brackets.rs:3:21
  |
3 | #[parameterized(v = [1, 2, 3])]
  |                     ^
